syntax = "proto3";

package basic;

service BasicService {
  rpc Register (RegisterRequest) returns (ResponseData) {}
  rpc Login (LoginRequest) returns (ResponseData) {}
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
  string mobile = 3;
  string userName = 4;
  string repassword = 5;
}

message ResponseData {
  int32 code = 1;
  string msg = 2;
  string data = 3;
}

// Login
message LoginRequest {
  string mobile = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}
